# video-resizer

./: .env.db.example  .env.docker.example  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
video/: admin.py  apps.py  models.py  signals.py  tasks.py  tests.py
video/migrations/: 0001_initial.py
video_resizer/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
